fix the overflox x on ios seconed try

--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,15 @@ meta[name="viewport"] {
 body,
 html {
   overflow-x: hidden;
+  /* overscroll-behavior-x: none;
+  width: 100%; */
+}
+/* safari option */
+body {
+  touch-action: pan-y;
+  -webkit-overflow-scrolling: touch;
   overscroll-behavior-x: none;
-  width: 100%;
+  overflow-x: hidden;
 }
 
 .bg-pink-lines {
